--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1210,6 +1210,7 @@ workflows:
       - run-test-ios-13:
           xcode_version: '14.2.0'
           install_swiftlint: false
+          <<: *release-branches
       - run-test-macos:
           <<: *release-branches
 
