missed iOS 13 a second time

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1296,6 +1296,7 @@ workflows:
       - run-test-ios-13:
           xcode_version: '14.2.0'
           install_swiftlint: false
+          <<: *release-branches
       - build-tv-watch-and-macos:
           <<: *release-branches
       - build-visionos:
