--- a/.circleci/configuration/base_config.yml
+++ b/.circleci/configuration/base_config.yml
@@ -1,3 +1,7 @@
+# CircleCI doesn't let us split a config file into multiple, so we have a pre-commit hook that does it for us
+# so that the file doens't become unmanageable. 
+# If you haven't done so yet, set up the pre-commit hook by calling bundle exec fastlane setup_dev.
+
 version: 2.1
 
 orbs:
