--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -395,6 +395,14 @@ commands:
 jobs:
   spm-release-build-xcode-14:
     <<: *base-job
+    parameters:
+      xcode_version:
+        type: string
+        default: '14.3.0'
+      install_swiftlint:
+        type: boolean
+        default: false
+
     steps:
       - checkout
       - run:
@@ -404,6 +412,11 @@ jobs:
 
   spm-release-build-xcode-15:
     <<: *base-job
+    parameters:
+      xcode_version:
+        type: string
+        default: '15.2'
+
     steps:
       - checkout
       - run:
@@ -413,6 +426,14 @@ jobs:
 
   spm-xcode-14-1:
     <<: *base-job
+    parameters:
+      xcode_version:
+        type: string
+        default: '14.1.0'
+      install_swiftlint:
+        type: boolean
+        default: false
+
     steps:
       - checkout
       - run:
@@ -598,6 +619,14 @@ jobs:
 
   run-test-ios-17:
     <<: *base-job
+    parameters:
+      xcode_version:
+        type: string
+        default: '15.2.0'
+      install_swiftlint:
+        type: boolean
+        default: false
+
     steps:
       - checkout
       - install-dependencies:
@@ -859,6 +888,13 @@ jobs:
 
   docs-build:
     <<: *base-job
+    parameters:
+      xcode_version:
+        type: string
+        default: '15.3'
+      install_swiftlint:
+        type: boolean
+        default: true
     steps:
       - setup-git-credentials
       - checkout
@@ -1232,23 +1268,6 @@ workflows:
           xcode_version: "15.2"
 
       # jobs that should only run for release branches
-      - docs-build:
-          xcode_version: '14.3.0'
-          install_swiftlint: false
-          <<: *release-branches
-      - spm-release-build:
-          <<: *release-branches
-      - spm-custom-entitlement-computation-build:
-          <<: *release-branches
-      - spm-receipt-parser:
-          <<: *release-branches
-      - spm-release-build-xcode-14:
-          xcode_version: '14.3.0'
-          install_swiftlint: false
-          <<: *release-branches
-      - spm-release-build-xcode-15:
-          xcode_version: '15.2'
-          <<: *release-branches
       - spm-xcode-14-1:
           xcode_version: '14.1.0'
           install_swiftlint: false
@@ -1405,7 +1424,18 @@ workflows:
   # and add a parameter called "run-manual-tests"
   manual-test-workflow:
     when:
-      equal: ["run-manual-tests", << pipeline.parameters.action >>]
+      and:
+        - not:
+            equal: [scheduled_pipeline, << pipeline.trigger_source >>]
+        - not: << pipeline.parameters.generate_snapshots >>
+        - not: << pipeline.parameters.generate_revenuecatui_snapshots >>
+        - or:
+            - matches: 
+                pattern: "^release/.*$"
+                value: << pipeline.git.branch >>
+            - equal:
+                - "manual_tests"
+                - << pipeline.trigger_source >>
     jobs:
       - backend-integration-tests-SK1
       - backend-integration-tests-SK2
