added missing step to pod lib lint

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -449,6 +449,7 @@ jobs:
     <<: *base-job
     steps:
       - checkout
+      - install-dependencies
       - run:
           name: Check pods and deployment targets
           command: bundle exec fastlane check_pods
