--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1314,38 +1314,21 @@ workflows:
 
   deploy:
     when:
-      not:
-        equal: [scheduled_pipeline, << pipeline.trigger_source >>]
+      and:
+        - not:
+            equal: [scheduled_pipeline, << pipeline.trigger_source >>]
+        - matches: 
+            pattern: "^release/.*$"
+            value: << pipeline.git.branch >>
     jobs:
-      - release-checks:
-          <<: *release-branches
-      - installation-tests-cocoapods:
-          <<: *release-branches
-      - installation-tests-swift-package-manager:
-          <<: *release-branches
-      - installation-tests-custom-entitlement-computation-swift-package-manager:
-          <<: *release-branches
-      - installation-tests-receipt-parser:
-          <<: *release-branches
-      - installation-tests-carthage:
-          <<: *release-branches
-      - installation-tests-xcode-direct-integration:
-          <<: *release-branches
+      - release-checks
       - hold:
           type: approval
           requires:
-            - release-checks
-            - installation-tests-cocoapods
-            - installation-tests-swift-package-manager
-            - installation-tests-custom-entitlement-computation-swift-package-manager
-            - installation-tests-carthage
-            - installation-tests-xcode-direct-integration
-            - installation-tests-receipt-parser
-          <<: *release-branches
+            - all-tests
       - tag-release-branch:
           requires:
             - hold
-          <<: *release-branches
       - make-release:
           <<: *release-tags
       - push-revenuecat-pod:
@@ -1409,7 +1392,7 @@ workflows:
 
   # to trigger tests manually, log into circleCI, select the project, a branch, and then click "Trigger Pipeline"
   # and add a parameter called "run-manual-tests"
-  manual-test-workflow:
+  all-tests:
     when:
       and:
         - not:
