fix metadata passed in

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1424,7 +1424,9 @@ workflows:
         - equal:
             - "run-manual-tests"
             - << pipeline.parameters.action >>
-        - equal: [ "run-from-github-comments", << pipeline.parameters.GHA_Event >>]
+        - equal: 
+            - "run-from-github-comments"
+            - << pipeline.parameters.GHA_Meta >>
     jobs:
       - backend-integration-tests-SK1
       - backend-integration-tests-SK2
