Fix release train deploy workflow (#4079)
The deploy workflow didn't run correctly, because of a regression
introduced in #4025 .

The problem is that we replaced the tag filters with a `when` clause,
but the job itself was relying on us using the filter and running the
second part of the deploy workflow from the tag itself and not the
branch.

I.e.: it wasn't entirely a chain of jobs, rather, there were two
separate chains, one for releases and one for tags, running in the same
job.

This PR splits the jobs into two parts: one that creates the tag, and
one that fires when a new tag is pushed, to create a release for it

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1335,7 +1335,7 @@ workflows:
       - run-test-ios-17
       - pod-lib-lint
 
-  deploy:
+  create-tag:
     when:
       and:
         - not:
@@ -1352,25 +1352,33 @@ workflows:
       - tag-release-branch:
           requires:
             - hold
-      - make-release:
-          <<: *release-tags
+
+  deploy-tag:
+    when:
+      and:
+        - equal: [push, << pipeline.trigger_source >>]
+        - exists: << pipeline.git.tag >>
+        - not:
+          matches:
+            pattern: ".*-SNAPSHOT$"
+            value: << pipeline.git.tag >>
+    jobs:
+      - make-release
       - push-revenuecat-pod:
           requires:
             - make-release
-          <<: *release-tags
       - push-revenuecatui-pod:
           requires:
-            - make-release
             - push-revenuecat-pod
-          <<: *release-tags
       - deploy-to-spm:
           requires:
             - make-release
-          <<: *release-tags
       - docs-deploy:
-          <<: *release-tags
+          requires:
+            - make-release
       - deploy-purchase-tester:
-          <<: *release-tags
+          requires:
+            - make-release
       - notify-on-non-patch-release-branches:
           requires:
             - make-release
