add the testing apps to the xcode project

--- a/Tests/TestingApps/PurchaseTester/PurchaseTester.xcodeproj/xcshareddata/xcschemes/WatchPurchaseTester - StoreKit Config Files (Xcode 12+).xcscheme
+++ b/Tests/TestingApps/PurchaseTester/PurchaseTester.xcodeproj/xcshareddata/xcschemes/WatchPurchaseTester - StoreKit Config Files (Xcode 12+).xcscheme
@@ -54,7 +54,7 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
-      notificationPayloadFile = "WatchPurchaseTester Extension/PushNotificationPayload.apns">
+      notificationPayloadFile = "Tests/TestingApps/PurchaseTester/WatchPurchaseTester Extension/PushNotificationPayload.apns">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
