Fixes trigger_all_tests.yml triggering on every issue comment

--- a/.github/workflows/trigger_all_tests.yml
+++ b/.github/workflows/trigger_all_tests.yml
@@ -8,7 +8,7 @@ jobs:
   trigger-circleci:
     runs-on: ubuntu-latest
     if: |
-      ${{ github.event.issue.pull_request }} &&
+      github.event.issue.pull_request &&
       github.event.comment.body == '@RCGitBot please test' &&
       github.repository == 'RevenueCat/purchases-ios'
 
