re-enable deploy purchase tester job on release

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1336,12 +1336,10 @@ workflows:
           requires:
             - make-release
           <<: *release-tags
-      # temporarily disabled since this won't work when building directly from its workspace.
-      # there's another PR to re-enable it
-      # - deploy-purchase-tester:
-      #     requires:
-      #       - make-release
-      #     <<: *release-tags
+      - deploy-purchase-tester:
+          requires:
+            - make-release
+          <<: *release-tags
 
   snapshot-bump:
     when:
